# arduino

arduino_serial/: CMakeLists.txt  build.py
arduino_serial/src/: main.c
datasheet/: infos.md
memory_game/: CMakeLists.txt  build.py
memory_game/src/: Array.c  Array.h  core.c  core.h  main.c
